--- a/my-nextjs-app/styles/img.css
+++ b/my-nextjs-app/styles/img.css
@@ -1,12 +1,11 @@
+/* styles\img.css */
+
+
  h1 {
     font-family: helvetica, arial, sans-serif;
     text-align: center;
   }
   
-  body {
-    width: 640px;
-    margin: 0 auto;
-  }
   
   .full-img {
     position: relative;
